cmake_minimum_required(VERSION 3.5)
project(MAIN VERSION 0.1 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin/)

set(CMAKE_AUTOUIC)
set(CMAKE_AUTOMOC)

set(CMAKE_PREFIX_PATH "C:/Qt/6.5.2/msvc2019_64")
find_package(Qt6 REQUIRED COMPONENTS Widgets)

set(PROJECT_SOURCES_FILES main.cpp)
set(PROJECT_HEADERS_FILES

)

qt_add_executable(${PROJECT_NAME} MANUAL_FINALIZATION ${PROJECT_SOURCES_FILES} ${PROJECT_HEADERS_FILES})
target_link_libraries(${PROJECT_NAME} PRIVATE Qt6::Widgets)